--- a/.github/workflows/prcontains.yml
+++ b/.github/workflows/prcontains.yml
@@ -11,6 +11,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: setup python
         uses: actions/setup-python@v2
         with:
