--- a/.github/workflows/prcontains.yml
+++ b/.github/workflows/prcontains.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           python -u ./scripts/pr_contains.py
 
-  job1:
+  find-issues:
     runs-on: ubuntu-latest
     needs: build
     permissions:
@@ -39,5 +39,10 @@ jobs:
         with:
           message-id: ${{needs.build.outputs.commentid}}
           message: |
-            ${{needs.build.outputs.template}} 
-
+            ${{needs.build.outputs.template}}
+  
+  add-reviewer:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: kentaro-m/auto-assign-action@v1.2.5
+        
