--- a/.github/workflows/prcontains.yml
+++ b/.github/workflows/prcontains.yml
@@ -14,6 +14,7 @@ jobs:
     outputs:
       template: ${{ steps.step1.outputs.template }}
       commentid: ${{ steps.step1.outputs.commentid }}
+      iserror: ${{ steps.step1.outputs.iserror }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -40,6 +41,9 @@ jobs:
           message-id: ${{needs.build.outputs.commentid}}
           message: |
             ${{needs.build.outputs.template}}
+      - name: Check if error
+        if: ${{needs.build.outputs.iserror == 'true'}}
+        run: exit 1
   
   add-reviewer:
     needs: find-issues
