--- a/.github/workflows/prcontains.yml
+++ b/.github/workflows/prcontains.yml
@@ -51,3 +51,10 @@ jobs:
     steps:
       - uses: kentaro-m/auto-assign-action@v1.2.5
         
+  labeler:
+    permissions:
+      contents: read
+      pull-requests: write
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/labeler@v5
