updating label action

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -10,4 +10,4 @@ hgcreation:
 info:
 - base-branch: 'main'
 - changed-files:
-  - any-glob-to-any-file: 'README.md'
+  - any-glob-to-any-file: README.md
