--- a/.github/workflows/prcontains.yml
+++ b/.github/workflows/prcontains.yml
@@ -56,6 +56,9 @@ jobs:
       contents: read
       pull-requests: write
     runs-on: ubuntu-latest
+    outputs:
+      alllabels: ${{ steps.labeler.outputs.all-labels }}
+      newlabels: ${{  steps.labeler.outputs.new-labels }}
     steps:
     - id: labeler
       uses: actions/labeler@v5
@@ -66,5 +69,7 @@ jobs:
         sync-labels: true
     - id: echo-labels
       run: |
-        echo "{{ steps.labeler.outputs.all-labels }}"
-        echo "{{ steps.labeler.outputs.new-labels }}"
+        echo "${{ steps.labeler.outputs.all-labels }}"
+        echo "${{ steps.labeler.outputs.new-labels }}"
+        echo "$alllabels"
+        echo "$newlabels"
