--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -2,11 +2,13 @@
 hgcreation:
 - base-branch: 'main'
 - changed-files:
+  - any-glob-to-any-file: '**/**/.md'
   - any-glob-to-any-file: '**/**/.hg'
   - any-glob-to-any-file: '**/**/.info'
   - all-globs-to-all-files: '!scripts/*'
 
-infoRepo:
+info:
 - base-branch: 'main'
 - changed-files:
-  - any-glob-to-any-file: 'README.md'
+  - any-glob-to-any-file: '!**/**/.md'
+  - all-globs-to-all-files: 'README.md'
