--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -2,13 +2,8 @@
 hgcreation:
 - base-branch: 'main'
 - changed-files:
-  - any-glob-to-any-file: '**/**/.md'
-  - any-glob-to-any-file: '**/**/.hg'
-  - any-glob-to-any-file: '**/**/.info'
+  - all-globs-to-all-file: ['**/**/.md', '**/**/.hg', '**/**/.info']
   - all-globs-to-all-files: '!scripts/*'
 
 info:
-- base-branch: 'main'
-- changed-files:
-  - any-glob-to-any-file: '!**/**/.md'
-  - all-globs-to-all-files: 'README.md'
+- README.md
